test/TestPhases/typechecker/invalid/unary4.blc

@[EntryPoint]
activity main()
    var a: [2] bool
    a = - a[1] // unary minus on non number
    await true
end